--- a/src/Components/Journal/Journal.css
+++ b/src/Components/Journal/Journal.css
@@ -2,7 +2,7 @@
 .journal {
     width: 100%;
     height: 100vh;
-    background-color: rgb(14, 22, 31);
+    background-color: rgba(14, 22, 31, 0.5);
     color: white;
     grid-area: journal;
     box-sizing: border-box;
@@ -19,6 +19,19 @@
     gap: 2rem;
     user-select: none;
 }
+
+.login-status {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 0.4rem;
+}
+
+/* .login-status > p {
+    text-justify: inter-word;
+} */
 
 #seros-logo {
     height: 35vh;
