--- a/src/Components/LoginWrapper.jsx/LoginWrapper.css
+++ b/src/Components/LoginWrapper.jsx/LoginWrapper.css
@@ -1,8 +1,7 @@
 #homepage-banner {
-    width: 30vw;
+    width: 100%;
     padding: 0 5rem;
     box-sizing: border-box;
-    background-color: rgb(14, 22, 31);
     display: flex;
     flex-direction: column;
 }
@@ -13,12 +12,42 @@
 }
 
 .user-form-inputs {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* background-color: rgb(14, 22, 31); */
+}
+
+.user-form-inputs > fieldset {
+    width: 80%;
+    background-color: rgba(14, 22, 31, 1);
+    padding: 1rem;
+    border: 3px solid rgb(10, 16, 22);
+    border-radius: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.user-form-inputs > fieldset > legend {
+    /* background-color: blue; */
+    color: white;
+    padding: 0.5rem;
+    font-size: 1.2rem;
+    letter-spacing: 0.05em;
+}
+
+.user-form-inputs > fieldset > label {
+    margin-bottom: 0.5rem;
     display: flex;
     flex-direction: column;
 }
 
-.user-form-inputs > label {
-    display: flex;
-    flex-direction: column;
-    /* width: 20rem; */
+.user-form-button {
+    margin: auto;
+}
+
+#sign-in-button {
+    align-self: center;
 }
