Add response messages for register route

--- a/src/Components/LoginWrapper.jsx/LoginWrapper.css
+++ b/src/Components/LoginWrapper.jsx/LoginWrapper.css
@@ -11,6 +11,10 @@
     align-self: center;
 }
 
+.login-response-message {
+    margin: auto;
+}
+
 .user-form-inputs {
     width: 100%;
     display: flex;
@@ -46,8 +50,4 @@
 
 .user-form-button {
     margin: auto;
-}
-
-#sign-in-button {
-    align-self: center;
 }
