--- a/src/App.css
+++ b/src/App.css
@@ -148,3 +148,18 @@ body {
     grid-template-columns: 70% 30%;
     grid-template-areas: "mapbox journal";
 }
+
+/* Add styles for all text inputs */
+input[type="text"],
+input[type="password"],
+input[type="email"] {
+    padding: 0.5rem 1rem;
+    box-sizing: border-box;
+}
+
+/* remove outline on focused inputs */
+input:focus,
+select:focus,
+textarea:focus {
+    outline: none;
+}
