Add info/list tabs to bottom of journal div

--- a/src/Components/Journal/Journal.css
+++ b/src/Components/Journal/Journal.css
@@ -12,21 +12,27 @@
 
 #journal-front-page-container {
     width: 30vw;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-areas:
+        "login"
+        "title"
+        "menu";
     align-items: center;
     justify-content: center;
-    gap: 2rem;
+    /* gap: 2rem; */
     user-select: none;
 }
 
 .login-status {
     width: 70%;
+    margin: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     gap: 0.4rem;
+    grid-area: login;
 }
 
 /* .login-status > p {
@@ -39,12 +45,29 @@
 }
 
 #journal-front-page-title {
-    font-size: 6rem;
-    width: 60%;
-
     height: fit-content;
+    width: fit-content;
+    text-align: center;
+    grid-area: title;
 }
 
-#journal-front-page-instructions {
+#journal-front-page-title > h1 {
+    font-size: 6rem;
+}
+
+#journal-front-page-title > h2 {
     font-size: 1.5rem;
+}
+#journal-front-page-menu {
+    grid-area: menu;
+    align-self: flex-start;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow-y: auto;
+}
+
+#journal-front-page-menu-header {
+    display: flex;
+    width: 100%;
 }
