--- a/src/Components/QuestList/QuestListWrapper.css
+++ b/src/Components/QuestList/QuestListWrapper.css
@@ -1,16 +1,24 @@
 #quest-list-wrapper {
-    padding: 0 8rem;
-    display: flex;
-    flex-direction: column;
-    gap: 3rem;
-}
-
-.quest-list-individual-quest {
+    padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
 
+/* .quest-list-individual-quest {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+} */
+
 /* .quest-list-individual-quest>p {
     margin-left: 1rem;
 } */
+
+.span-color-green {
+    color: green;
+}
+
+.span-color-red {
+    color: red;
+}
