--- a/src/Components/QuestList/QuestListWrapper.css
+++ b/src/Components/QuestList/QuestListWrapper.css
@@ -5,6 +5,21 @@
     gap: 1rem;
 }
 
+#quest-list-wrapper-header {
+    position: sticky;
+    top: 1rem;
+}
+
+#quest-list-wrapper-header::before {
+    content: "";
+    position: absolute;
+    top: calc(-1rem + 2px);
+    display: block;
+    background-color: rgb(14 22 31);
+    width: 100%;
+    height: calc(1rem - 2px);
+}
+
 /* .quest-list-individual-quest {
     display: flex;
     flex-direction: column;
