Add location list with filtering + map interaction

--- a/src/Components/LocationList/LocationListWrapper.css
+++ b/src/Components/LocationList/LocationListWrapper.css
@@ -1,9 +1,31 @@
 #create-location-wrapper {
-    height: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 1rem 0;
     gap: 2rem;
+}
+
+#location-list-wrapper {
+    padding: 1rem 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.2rem;
+}
+
+#location-list-wrapper-header {
+    position: sticky;
+    top: 1rem;
+}
+
+#location-list-wrapper-header::before {
+    content: "";
+    position: absolute;
+    top: calc(-1rem + 2px);
+    display: block;
+    background-color: rgb(14 22 31);
+    width: 100%;
+    height: calc(1rem - 2px);
 }
