--- a/src/Components/LocationList/LocationListCreateNewLocation.css
+++ b/src/Components/LocationList/LocationListCreateNewLocation.css
@@ -1,9 +1,11 @@
 #journal-create-new-location {
     width: 100%;
+    background-color: rgba(14, 22, 31, 0.5);
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
     align-items: center;
-    margin: 1rem 0;
+    padding: 1rem 0;
     position: relative;
 }
 
