--- a/src/Components/DeletionModal/DeletionModal.css
+++ b/src/Components/DeletionModal/DeletionModal.css
@@ -40,10 +40,10 @@
     align-self: center;
 }
 
-.deletion-modal-p {
+#deletion-modal-p {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 0.7rem;
 }
 
 #deletion-modal-form {
@@ -63,4 +63,24 @@
 
 .data-to-delete {
     text-decoration: underline;
+}
+
+.deletion-modal-warning {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+}
+
+.deletion-modal-warning > ul {
+    list-style-type: circle;
+    margin-left: 2rem;
+}
+
+.deletion-modal-warning > ul > li {
+    padding: 0.2rem 0;
+    list-style-type: circle;
+}
+
+.deletion-modal-warning-bold {
+    font-weight: 700;
 }
