--- a/src/Components/LocationNotes/LocationNotes.css
+++ b/src/Components/LocationNotes/LocationNotes.css
@@ -3,7 +3,7 @@
     height: 100vh;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 0.7rem;
     overflow-y: auto;
     font-family: "Noto Sans", sans-serif;
     /* background: #fdf1dc; */
@@ -44,12 +44,17 @@
 #location-notes-data {
     padding: 0 1rem;
     color: #922610;
+    margin-bottom: 2rem;
 }
 
 #location-notes-data > p {
     font-size: 1em;
-    margin-bottom: 2rem;
     align-self: center;
+    color: white;
+}
+
+#location-notes-data > p:not(:first-child) {
+    margin-top: 0.7rem;
 }
 
 .location-notes-category-wrapper-image {
