Check if user is logged in and render create new campaign box accordingly

--- a/src/Components/Dashboard/Dashboard.css
+++ b/src/Components/Dashboard/Dashboard.css
@@ -38,3 +38,9 @@
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+#dashboard-login-prompt {
+    font-size: 3rem;
+    width: 40%;
+    position: relative;
+}
