--- a/src/Components/LoginWrapper/LoginWrapper.css
+++ b/src/Components/LoginWrapper/LoginWrapper.css
@@ -1,15 +1,20 @@
 #homepage-banner {
+    height: 100vh;
     width: 100%;
     padding: 0 5rem;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    justify-content: center;
 }
 
 #homepage-banner > h1,
 #homepage-banner > h2 {
     align-self: center;
+}
+
+#login-wrapper {
 }
 
 .login-response-message {
@@ -25,7 +30,7 @@
 }
 
 .user-form-inputs > fieldset {
-    width: 80%;
+    width: 40%;
     background-color: rgba(14, 22, 31, 1);
     padding: 1rem;
     border: 3px solid rgb(10, 16, 22);
@@ -50,5 +55,5 @@
 }
 
 .user-form-button {
-    margin: auto;
+    margin: 0 auto;
 }
