Add rezise value to textarea elements

--- a/src/Components/LocationNotes/LocationNotes.css
+++ b/src/Components/LocationNotes/LocationNotes.css
@@ -124,6 +124,10 @@ button {
     gap: 0.5rem;
 }
 
+.location-notes-create > label > textarea {
+    resize: vertical;
+}
+
 .location-notes-submit {
     align-self: center;
     padding-bottom: 0.7rem;
