--- a/src/App.css
+++ b/src/App.css
@@ -144,9 +144,11 @@ body {
 /* Use the following code to make the map box and notes appear next to each other, however this results in the map box not functioning correctly - so have taken this away for now */
 .home-page-wrapper {
     width: 100vw;
+    height: 100vh;
     display: grid;
     grid-template-columns: 70% 30%;
     grid-template-areas: "mapbox journal";
+    overflow-y: hidden;
 }
 
 /* Add styles for all text inputs */
