--- a/src/Components/LoginWrapper/LoginWrapper.css
+++ b/src/Components/LoginWrapper/LoginWrapper.css
@@ -1,7 +1,7 @@
 #video-background-wrapper {
     width: 100vw;
     height: 100%;
-    overflow-y: hidden;
+    overflow: hidden;
 }
 
 /* #map-pan-video {
@@ -32,23 +32,95 @@
     position: relative;
 }
 
-#login-form-wrapper {
-    display: flex;
-    flex-direction: column;
+#login-screen-wrapper {
+    display: grid;
+    grid-template-areas:
+        "left-arrow header right-arrow"
+        "left-arrow content right-arrow"
+        "left-arrow scroller right-arrow";
+    grid-template-rows: 2fr 10fr 0.5fr;
+    grid-template-columns: 0.5fr 10fr 0.5fr;
     position: absolute;
     background-color: rgba(14, 22, 31, 1);
+    box-sizing: border-box;
     width: 40rem;
-    height: 100vh;
-    right: 0;
+    height: 80vh;
+    padding: 1rem;
+    left: 50%;
+    transform: translate(-50%, 0);
+    border-radius: 2rem;
+}
+
+/* ARROW STYLES */
+
+.login-screen-arrow-wrapper {
+    align-self: center;
+    justify-self: center;
+}
+
+.login-screen-arrow-wrapper#left-arrow {
+    grid-area: left-arrow;
+}
+
+.login-screen-arrow-wrapper#right-arrow {
+    grid-area: right-arrow;
+}
+
+/* HEADER WRAPPER STYLES */
+#login-screen-header-wrapper {
+    grid-area: header;
+    align-self: center;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#login-screen-header {
+    font-size: 2rem;
+}
+
+.login-screen-text-center {
+    align-self: center;
+}
+
+/* CONTENT WRAPPER STYLES */
+#login-screen-content-display-wrapper {
+    grid-area: content;
+    align-self: center;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+}
+
+/* CONTENT SCROLLER BAR STYLES */
+#content-display-scroller-wrapper {
+    grid-area: scroller;
+    width: auto;
+    height: auto;
+    align-self: center;
+    justify-self: center;
+}
+
+#content-display-scroller-progress {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+}
+
+.content-display-scroller-progress-bar {
+    width: 1rem;
+    height: 1rem;
+    border-radius: 1rem;
+    text-align: center;
+    cursor: pointer;
 }
 
 .user-form-inputs {
-    /* width: 100vw; */
-    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* background-color: rgb(14, 22, 31); */
 }
 
 .user-form-inputs > fieldset {
