--- a/src/Components/LoginWrapper/LoginWrapper.css
+++ b/src/Components/LoginWrapper/LoginWrapper.css
@@ -1,11 +1,9 @@
 #video-background-wrapper {
     width: 100vw;
-    height: 100%;
+    /* height: 101vh; */
     overflow: hidden;
+    /* bottom: 1rem; */
 }
-
-/* #map-pan-video {
-} */
 
 #login-wrapper {
     height: 100vh;
@@ -86,11 +84,54 @@
 
 /* CONTENT WRAPPER STYLES */
 #login-screen-content-display-wrapper {
+    width: 100%;
+    height: 100%;
     grid-area: content;
     align-self: center;
     justify-self: center;
     display: flex;
     flex-direction: column;
+    /* flex-direction: column; */
+}
+
+#content-display-wrapper {
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 1rem 0;
+    display: grid;
+    grid-template-areas:
+        "image-wrapper"
+        "list-wrapper";
+    grid-template-rows: 2fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
+#content-display-image-wrapper {
+    grid-area: image-wrapper;
+    width: 34rem;
+    height: 18rem;
+    border: 2px solid black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#content-display-list-wrapper {
+    grid-area: list-wrapper;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    /* align-self: flex-end; */
+    align-items: center;
+    justify-items: center;
+}
+
+.content-display-list-text {
+    text-align: center;
 }
 
 /* CONTENT SCROLLER BAR STYLES */
