Refactor login screen to declutter it

--- a/src/Components/LoginWrapper/LoginWrapper.css
+++ b/src/Components/LoginWrapper/LoginWrapper.css
@@ -87,4 +87,7 @@
 /* LOGIN WRAPPER STYLES */
 #login-screen-content-display-wrapper {
     grid-area: login;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
