--- a/src/App.css
+++ b/src/App.css
@@ -146,12 +146,15 @@ body {
 }
 
 /* Use the following code to make the map box and notes appear next to each other, however this results in the map box not functioning correctly - so have taken this away for now */
-.home-page-wrapper {
+.map-screen-wrapper {
     width: 100vw;
     height: 100vh;
     display: grid;
+    grid-template-rows: 10% 90%;
     grid-template-columns: 70% 30%;
-    grid-template-areas: "mapbox journal";
+    grid-template-areas:
+        "header header"
+        "mapbox journal";
     overflow-y: hidden;
 }
 
