--- a/src/App.css
+++ b/src/App.css
@@ -148,13 +148,11 @@ body {
 /* Use the following code to make the map box and notes appear next to each other, however this results in the map box not functioning correctly - so have taken this away for now */
 .map-screen-wrapper {
     width: 100vw;
-    height: 100vh;
+    height: 90vh;
     display: grid;
     grid-template-rows: 10% 90%;
     grid-template-columns: 70% 30%;
-    grid-template-areas:
-        "header header"
-        "mapbox journal";
+    grid-template-areas: "mapbox journal";
     overflow-y: hidden;
 }
 
