--- a/src/Components/JournalMenu/JournalMenuHeaderBox.css
+++ b/src/Components/JournalMenu/JournalMenuHeaderBox.css
@@ -16,11 +16,12 @@
 }
 
 .instruction-header-box-end {
-    border: 1px solid black;
+    border-bottom: 1px solid black;
+    border-left: 1px solid black;
+    border-right: 1px solid black;
 }
 
 .instruction-header-box-middle {
-    border-top: 1px solid black;
     border-bottom: 1px solid black;
 }
 
