--- a/src/Components/LoginWrapper/UserFormStyles.css
+++ b/src/Components/LoginWrapper/UserFormStyles.css
@@ -1,45 +1,29 @@
 .user-form-wrapper {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
 }
 
 .user-form-inputs {
-    grid-area: form;
-    /* display: flex;
-    flex-direction: column;
-    align-items: center; */
-}
-
-.user-form-inputs > fieldset {
-    width: 40%;
-    background-color: rgba(14, 22, 31, 1);
-    padding: 1rem;
-    border: 3px solid rgb(10, 16, 22);
-    border-radius: 1rem;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0 0.5rem;
-}
-
-.user-form-inputs > fieldset > legend {
-    color: white;
-    padding: 0.5rem;
-    font-size: 1.2rem;
-    letter-spacing: 0.05em;
-}
-
-.user-form-inputs > fieldset > label {
-    margin-bottom: 0.5rem;
-    display: flex;
-    flex-direction: column;
-}
-
-/* LOGIN FORM STYLES */
-#user-form-inputs-login > fieldset {
+    grid-area: form;
     grid-template-areas:
         "username password"
         "button button";
+    gap: 0 0.5rem;
+    width: auto;
+    height: auto;
+    padding: 1rem;
+    background-color: rgba(14, 22, 31, 1);
+    border: 1px solid white;
+    border-radius: 1rem;
+}
+
+.user-form-inputs > label {
+    margin-bottom: 0.5rem;
+    display: flex;
+    flex-direction: column;
 }
 
 #login-name {
@@ -56,7 +40,7 @@
 }
 
 /* REGISTER FORM STYLES */
-#user-form-inputs-register > fieldset {
+#user-form-inputs-register {
     grid-template-areas:
         "username email"
         "password button";
@@ -90,4 +74,5 @@
     width: 8rem;
     height: fit-content;
     margin: 0 auto;
+    align-self: flex-end;
 }
