--- a/src/Components/LocationNotes/LocationNotes.css
+++ b/src/Components/LocationNotes/LocationNotes.css
@@ -43,7 +43,7 @@
 #location-notes-data {
     padding: 0 1rem;
     color: #922610;
-    margin-bottom: 2rem;
+    margin-bottom: 6rem;
 }
 
 #location-notes-data > p {
@@ -166,7 +166,7 @@ button {
     width: 99%;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
 }
 
 .location-notes-brighter-filter {
