--- a/src/Components/ErrorElements/CampaignError.css
+++ b/src/Components/ErrorElements/CampaignError.css
@@ -1,6 +1,6 @@
-#error-element-wrapper {
-    width: 100vw;
-    height: 100vh;
+#campaign-error-element-wrapper {
+    width: 100%;
+    height: 90vh;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -8,6 +8,6 @@
     justify-content: center;
 }
 
-#error-element-wrapper > h2 {
+#campaign-error-element-wrapper > h2 {
     font-size: 2rem;
 }
