--- a/src/Components/ErrorElements/CampaignError.css
+++ b/src/Components/ErrorElements/CampaignError.css
@@ -6,8 +6,14 @@
     gap: 1rem;
     align-items: center;
     justify-content: center;
+    text-align: center;
 }
 
 #campaign-error-element-wrapper > h2 {
     font-size: 2rem;
+}
+
+#campaign-error-element-wrapper > ul {
+    list-style-type: disc;
+    text-align: left;
 }
