--- a/src/Components/LocationNotes/LocationNotes.css
+++ b/src/Components/LocationNotes/LocationNotes.css
@@ -106,6 +106,7 @@ button {
 /* SUBMIT FORM STYLES - These are the styles found within the location-notes section when a user wants to add new data */
 
 .location-notes-form {
+    width: 80%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
