Create instance meter component layout

--- a/src/Components/LocationNotes/CombatInstances/CombatInstanceNotes.css
+++ b/src/Components/LocationNotes/CombatInstances/CombatInstanceNotes.css
@@ -1,81 +1,6 @@
-/* const artificerColor = rgba(196, 30, 58)
-    const barbarianColor = 
-    const bardColor = 
-    const bloodHunterColor =
-    const clericColor =
-    const druidColor =
-    const fighterColor =
-    const monkColor =
-    const paladinColor =
-    const rangerColor = 
-    const rogueColor =
-    const sorcererColor =
-    const warlockColor = 
-    const wizardColor =  */
-
-/* All class colors are the class colors from WoW, with a few exceptions as some did not fit. A comment has been left if the D&D class name did not match the WoW class name */
-
-.artificer {
-    /* This is the Evoker class color from WoW */
-    color: rgb(51, 147, 127);
-}
-
-.barbarian {
-    /* This is the Death Knight class color from WoW */
-    color: rgb(196, 30, 58);
-}
-
-.bard {
-    /* Improvised class color for bard, subject to change */
-    color: rgb(143, 18, 112);
-}
-
-.blood-hunter {
-    /* This is the Demon Hunter class color from WoW */
-    color: rgb(163, 48, 201);
-}
-
-.cleric {
-    /* This is the Priest class color from WoW */
-    color: rgb(255, 255, 255);
-}
-
-.druid {
-    color: rgb(255, 124, 10);
-}
-
-.fighter {
-    /* This is the Warrior class color from WoW */
-    color: rgb(198, 155, 109);
-}
-
-.monk {
-    color: rgb(0, 255, 152);
-}
-
-.paladin {
-    color: rgb(244, 140, 186);
-}
-
-.ranger {
-    /* This is the Hunter class color from WoW */
-    color: rgb(170, 211, 114);
-}
-
-.rogue {
-    color: rgb(255, 244, 104);
-}
-
-.sorcerer {
-    /* This is the Sorcerer class color from WoW */
-    color: rgb(0, 112, 221);
-}
-
-.warlock {
-    color: rgb(135, 136, 238);
-}
-
-.wizard {
-    /* This is the Mage class color from WoW */
-    color: rgb(63, 199, 235);
+.location-notes-instance-meters-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
 }
