--- a/src/Components/LocationNotes/CombatInstances/PlayerBar.css
+++ b/src/Components/LocationNotes/CombatInstances/PlayerBar.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     width: 100%;
     height: 1.5rem;
     /* padding: 0 3%; */
@@ -16,17 +17,21 @@
 .player-meter-bar-name {
     display: flex;
     flex-direction: row;
-    width: 70%;
+    width: 72%;
     position: absolute;
+    padding-left: 1rem;
+    gap: 0.5rem;
 }
 
 .player-meter-bar-numbers {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
     gap: 1rem;
-    width: 30%;
+    width: 28%;
     position: absolute;
     right: 0;
+    padding-right: 1rem;
 }
 
 /* All class colors are the class colors from WoW, with a few exceptions as some did not fit. A comment has been left if the D&D class name did not match the WoW class name */
@@ -79,7 +84,7 @@
 }
 
 .rogue {
-    background-color: rgb(255, 244, 104);
+    background-color: rgb(184, 176, 63);
 }
 
 .sorcerer {
