--- a/src/Components/MapBox/MapBox.css
+++ b/src/Components/MapBox/MapBox.css
@@ -13,10 +13,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1;
+    text-align: center;
+    gap: 0.1rem;
 }
 
 .popup-h2 {
     font-size: 1.5rem;
     text-decoration: underline;
+}
+
+.popup-button-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.popup-button-wrapper > button {
+    width: 25%;
 }
