--- a/src/Components/LocationNotes/LocationNotes.css
+++ b/src/Components/LocationNotes/LocationNotes.css
@@ -17,7 +17,7 @@
 
 #location-notes-title {
     height: auto;
-    padding: 0.5rem 0;
+    padding: 0 0 0.5rem 0;
     width: 100%;
     font-size: 4em;
     align-self: center;
