--- a/src/Components/Dashboard/CampaignSettingsWrapper.css
+++ b/src/Components/Dashboard/CampaignSettingsWrapper.css
@@ -13,6 +13,15 @@
     gap: 0.5rem;
 }
 
+.dashboard-settings-admin-icons {
+    position: absolute;
+    right: 1rem;
+    width: 3rem;
+    height: 1.5rem;
+    display: flex;
+    gap: 1rem;
+}
+
 /* CAMPAIGN SETTINGS TITLE STYLES START */
 .dashboard-banner-campaign-settings-title-wrapper {
     grid-area: title;
