--- a/src/App.css
+++ b/src/App.css
@@ -149,10 +149,7 @@ body {
 .map-screen-wrapper {
     width: 100vw;
     height: 90vh;
-    display: grid;
-    grid-template-rows: 10% 90%;
-    grid-template-columns: 70% 30%;
-    grid-template-areas: "mapbox journal";
+    display: flex;
     overflow-y: hidden;
 }
 
