--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -2,6 +2,7 @@
     position: relative;
     right: 0%;
     height: 100%;
+    box-sizing: border-box;
     background-color: rgba(14, 22, 31);
     color: white;
     grid-area: journal;
@@ -18,4 +19,12 @@
 
 .sidebar-closed.sidebar-wrapper {
     width: 0;
+}
+
+#sidebar-header {
+    width: 100%;
+    padding: 1rem 0;
+    display: flex;
+    justify-content: center;
+    font-size: 2rem;
 }
